Placeholder. Under construction website

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,18 +4,79 @@
 
 html, body {
   margin: 0;
-  border: 0;
   padding: 0;
-  background-color: #fff;
+  height: 100%;
+  width: 100%;
 }
 
 main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  height: 100%;
+}
+/* 
+.buttons_holder {
+  position: fixed;
+  margin: 0;
+  width: 100%;
+  padding: 2.5rem;
+  background-color: palevioletred;
+  border-bottom-right-radius:  1rem;
+  border-bottom-left-radius:  1rem;
+  display: list-item;
+} */
+
+.jack_papel {
+  position: relative;
+  padding:0;
+  background: #ffffff url("Screenshot 2021-01-04 085530.png") no-repeat top center;
+  background-size:cover!important;
+  /*box-shadow: inset 0 0 10rem black; /* vignette */
+  display: flex;
+  text-align: center;
+  overflow: hidden;
+  background-attachment: fixed;
+  height: 35%;
 }
 
-main > h1 {
-  text-align: center;
+.jack_papel > h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 4.5em;
+  margin: auto;
+}
+
+.about {
+  height: 65%;
+  background-color: rgb(48, 48, 50);
+  padding:0;
+  margin: 0;
+  display: flex;
+  flex-basis: content;
+}
+
+.about > .center {
+  padding: 0;
+  margin: auto;
+  font-family: 'Montserrat', sans-serif;
+  color:rgb(198, 198, 198)
+}
+
+.center > * {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2em;
+  padding: 0;
+  margin: 0;
+  padding: 1rem;
+}
+
+.center > h2 {
   font-size: 3.5em;
+  padding: 2rem;
+}
+
+a {
+  color: rgb(188,198,228);
+  font-weight: bolder;
+  font-family: inherit;
+  text-decoration: none;
 }
