--- a/src/classes.css
+++ b/src/classes.css
@@ -6,7 +6,7 @@
   animation-delay: calc(var(--scroll) * -1s);
   animation-iteration-count: 1;
   animation-fill-mode: both;
-  text-shadow: 0px 0px 5px black;
+  text-shadow: 0px 0px 5px var(--primary);
 }
 
 @keyframes nav-fade {
@@ -20,9 +20,13 @@
   30% {
     opacity: 0%;
   }
-  99% {
+  59% {
     opacity: 0%;
     background: none;
+  }
+  60% {
+    opacity: 100%;
+    background: var(--primary);
   }
   100% {
     opacity: 100%;
@@ -97,7 +101,7 @@
 }
 
 .links a {
-  text-shadow: 0px 0px 10px black;
+  text-shadow: 0px 0px 10px var(--primary);
 }
 
 .bottom-scroll-stop {
@@ -109,5 +113,5 @@
 }
 
 .highlight {
-  color: var(--highlight);
+  color: var(--secondary);
 }
