--- a/src/sections.css
+++ b/src/sections.css
@@ -4,7 +4,7 @@ section {
   color: var(--primary);
   padding-top: 2rem;
   padding-bottom: 2rem;
-  border-top: var(--primary) 1rem solid;
+  /* border-top: var(--primary) 1rem solid; */
 }
 
 #jack-papel {
@@ -64,9 +64,9 @@ section {
   }
 }
 
-#about, #resume {
-  background-color: var(--secondary);
-  color: var(--primary);
+#about {
+  background-color: var(--primary);
+  color: var(--background);
 }
 
 #portfolio {
