--- a/src/classes.css
+++ b/src/classes.css
@@ -57,8 +57,8 @@
 }
 
 .hero {
-  height: 100dvh;
-  width: 100dvw;
+  height: 100vh;
+  width: 100vw;
   padding: 0;
   margin: 0;
 }
@@ -108,7 +108,7 @@
   position: absolute;
   bottom: 0;
   height: 1px;
-  width: 100dvw;
+  width: 100vw;
   scroll-snap-align: end;
 }
 
