--- a/src/elements.css
+++ b/src/elements.css
@@ -4,6 +4,13 @@ html {
   scroll-padding-top: 3rem;
 }
 
+@media (pointer: coarse) {
+  html, body {
+    overflow: auto;
+    scroll-snap-type: none;
+  }
+}
+
 body {
   position: relative;
 
@@ -42,13 +49,14 @@ main {
 }
 
 nav {
-  width: 100%;
+  /* width: 100%; */
   z-index: 1;
 }
 
 nav > ul {
   padding: 1rem 0;
-  margin: auto;
+  max-width: 100vw;
+  margin: 0;
   display: flex;
   flex-flow: row wrap;
   align-content: center;
